--- a/FeedControl/adultoSabor&Vida.html
+++ b/FeedControl/adultoSabor&Vida.html
@@ -178,7 +178,7 @@
                         <p class="titulosaborVidaF">SABOR & VIDA CÃES ADULTOS</p>
                         <p class="subtitulosaborVidaF"><b>SACHÊ CÃES ADULTOS</b></p>
                         <p class="textosaborVida"> <b>SABOR E VIDA CÃES ADULTOS PEDAÇOS 
-                            DE CARNE E FÍGADO AO MOLHO</b> É uma linha completa de alimentos 
+                                DE CARNE E FÍGADO AO MOLHO</b> É uma linha completa de alimentos 
                             Premium Especial, formulada com ingredientes nobres e com
                             um sabor inigualável. Sabor & Vida possui molho na medida
                             certa e garante a satisfação de cães e gatos com paladares exigentes.
@@ -198,6 +198,62 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+
+        <footer id="rodape">
+            <div class="row">
+
+                <!--<div class="conteudo">--> 
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="primeiro" >
+                        <img src="img/logo.png" >
+                        <br>
+
+                        <i class="fa fa-envelope-o email" aria-hidden="true" ></i>tanto@tanto.com.br
+
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="nevegacao">
+                        <!--                            <strong> Unidade Lages </strong>-->
+
+
+                        <br>
+                        <nav >
+                            <ul>
+                                <li>
+                                    <a href="sobre.html">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="contato.html">Contato</a>
+                                </li>
+                                <li>
+                                    <a href="vendedores.html">Vendedores</a>
+                                </li>
+                                <li>
+                                    <a href="cidades.html">Cidades Atendidas</a>
+                                </li>                          
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="direita">
+                        <strong> Unidade Lages </strong>
+
+                        <br>
+
+                        <br>
+                        Bairro Centro. CEP 88501-045
+                        <br>
+
+                        (49)3232-1232
+                    </div> 
+
+                </div>
+            </div>
+            <!--</div>-->
+        </footer>
 
     </body>
 
