--- a/FeedControl/cachorrosHeroi.html
+++ b/FeedControl/cachorrosHeroi.html
@@ -82,12 +82,12 @@
 
             </div>
         </div>
-       
+
         <div class="container">
-            
+
 
             <div class="row">
-                 <div class="col-sm-12 col-lg-12 col-md-12">
+                <div class="col-sm-12 col-lg-12 col-md-12">
                     <p class="heroi"><b>HERÓI</b></p>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6">
@@ -113,17 +113,66 @@
                 </div>              
             </div>
         </div>
-
-
-
-
-
-
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+        <footer id="rodape">
+            <div class="row">
+
+                <!--<div class="conteudo">--> 
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="primeiro" >
+                        <img src="img/logo.png" >
+                        <br>
+
+                        <i class="fa fa-envelope-o email" aria-hidden="true" ></i>tanto@tanto.com.br
+
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="nevegacao">
+                        <!--                            <strong> Unidade Lages </strong>-->
+
+
+                        <br>
+                        <nav >
+                            <ul>
+                                <li>
+                                    <a href="sobre.html">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="contato.html">Contato</a>
+                                </li>
+                                <li>
+                                    <a href="vendedores.html">Vendedores</a>
+                                </li>
+                                <li>
+                                    <a href="cidades.html">Cidades Atendidas</a>
+                                </li>                          
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="direita">
+                        <strong> Unidade Lages </strong>
+
+                        <br>
+
+                        <br>
+                        Bairro Centro. CEP 88501-045
+                        <br>
+
+                        (49)3232-1232
+                    </div> 
+
+                </div>
+            </div>
+            <!--</div>-->
+        </footer>
 
     </body>
 
