--- a/FeedControl/cidades.html
+++ b/FeedControl/cidades.html
@@ -31,7 +31,7 @@
     </head>
 
     <body ng-controller="CidadesController">      
-<!--  -->
+        <!--  -->
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
@@ -70,8 +70,8 @@
             <!-- /.container -->
         </nav>        
         <div id="map"></div>
-     
-        
+
+
         <script async defer
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9UvTqsa3HWttJpOUJPpecIHj_XGDsLoE&callback=initMap();">
         </script>
@@ -103,6 +103,62 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+
+        <footer id="rodape">
+            <div class="row">
+
+                <!--<div class="conteudo">--> 
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="primeiro" >
+                        <img src="img/logo.png" >
+                        <br>
+
+                        <i class="fa fa-envelope-o email" aria-hidden="true" ></i>tanto@tanto.com.br
+
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="nevegacao">
+                        <!--                            <strong> Unidade Lages </strong>-->
+
+
+                        <br>
+                        <nav >
+                            <ul>
+                                <li>
+                                    <a href="sobre.html">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="contato.html">Contato</a>
+                                </li>
+                                <li>
+                                    <a href="vendedores.html">Vendedores</a>
+                                </li>
+                                <li>
+                                    <a href="cidades.html">Cidades Atendidas</a>
+                                </li>                          
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="direita">
+                        <strong> Unidade Lages </strong>
+
+                        <br>
+
+                        <br>
+                        Bairro Centro. CEP 88501-045
+                        <br>
+
+                        (49)3232-1232
+                    </div> 
+
+                </div>
+            </div>
+            <!--</div>-->
+        </footer>
 
     </body>
 
