--- a/FeedControl/contato.html
+++ b/FeedControl/contato.html
@@ -80,7 +80,7 @@
                     <!-- tirei as coisas daqui -->
                 </div>
 
-                
+
                 <br>
                 <br>
                 <div class="row">
@@ -91,7 +91,7 @@
                 </div>
             </div>
         </div>
-        
+
         <footer >
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3528.7025251825326!2d-50.34569268452909!3d-27.81892288274585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e01f56a7d7881f%3A0x3b105f266fa26288!2sR.+Val%C3%A9rio+Antunes%2C+1283+-+Copacabana%2C+Lages+-+SC%2C+88504-310!5e0!3m2!1spt-BR!2sbr!4v1492437884328" width="1100" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </footer>
@@ -102,6 +102,61 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+        <footer id="rodape">
+            <div class="row">
+
+                <!--<div class="conteudo">--> 
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="primeiro" >
+                        <img src="img/logo.png" >
+                        <br>
+
+                        <i class="fa fa-envelope-o email" aria-hidden="true" ></i>tanto@tanto.com.br
+
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="nevegacao">
+                        <!--                            <strong> Unidade Lages </strong>-->
+
+
+                        <br>
+                        <nav >
+                            <ul>
+                                <li>
+                                    <a href="sobre.html">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="contato.html">Contato</a>
+                                </li>
+                                <li>
+                                    <a href="vendedores.html">Vendedores</a>
+                                </li>
+                                <li>
+                                    <a href="cidades.html">Cidades Atendidas</a>
+                                </li>                          
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="direita">
+                        <strong> Unidade Lages </strong>
+
+                        <br>
+
+                        <br>
+                        Bairro Centro. CEP 88501-045
+                        <br>
+
+                        (49)3232-1232
+                    </div> 
+
+                </div>
+            </div>
+            <!--</div>-->
+        </footer>
 
     </body>
 
