--- a/FeedControl/senior.html
+++ b/FeedControl/senior.html
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-6 col-md-6">
                     <div class="thumbnail" style="border: 0;">
-                        
+
                         <p class="titulo">GUABI NATURAL</p>
                         <p class="subtitulo"><b>CÃES SÊNIOR GRANDES E GIGANTES</b></p>
                         <div class="racao">
@@ -107,7 +107,7 @@
                     </div>
                 </div>                       
             </div>
-            
+
         </div>
 
         <!-- jQuery -->
@@ -115,6 +115,61 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+        <footer id="rodape">
+            <div class="row">
+
+                <!--<div class="conteudo">--> 
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="primeiro" >
+                        <img src="img/logo.png" >
+                        <br>
+
+                        <i class="fa fa-envelope-o email" aria-hidden="true" ></i>tanto@tanto.com.br
+
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="nevegacao">
+                        <!--                            <strong> Unidade Lages </strong>-->
+
+
+                        <br>
+                        <nav >
+                            <ul>
+                                <li>
+                                    <a href="sobre.html">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="contato.html">Contato</a>
+                                </li>
+                                <li>
+                                    <a href="vendedores.html">Vendedores</a>
+                                </li>
+                                <li>
+                                    <a href="cidades.html">Cidades Atendidas</a>
+                                </li>                          
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="direita">
+                        <strong> Unidade Lages </strong>
+
+                        <br>
+
+                        <br>
+                        Bairro Centro. CEP 88501-045
+                        <br>
+
+                        (49)3232-1232
+                    </div> 
+
+                </div>
+            </div>
+            <!--</div>-->
+        </footer>
 
     </body>
 
