--- a/FeedControl/seniorSabor&Vida.html
+++ b/FeedControl/seniorSabor&Vida.html
@@ -88,10 +88,10 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-6 col-md-6">
                     <div class="thumbnail" style="border: 0;">
-                        
+
                         <p class="titulosaborVidaF">SABOR E VIDA</p>
                         <p class="subtitulosaborVidaF"><b>CÃES SÊNIOR</b></p>
-                         <p class="textosaborVida"> é um alimento Premium Especial completo
+                        <p class="textosaborVida"> é um alimento Premium Especial completo
                             e balanceado para cães filhotes e adultos em diferentes fases
                             de vida. Formulado com ingredientes nobres, proporciona um
                             desenvolvimento perfeito, contribuindo para uma vida mais
@@ -103,7 +103,7 @@
                     </div>
                 </div>                                     
             </div>
-            
+
         </div>
 
         <!-- jQuery -->
@@ -111,6 +111,61 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+        <footer id="rodape">
+            <div class="row">
+
+                <!--<div class="conteudo">--> 
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="primeiro" >
+                        <img src="img/logo.png" >
+                        <br>
+
+                        <i class="fa fa-envelope-o email" aria-hidden="true" ></i>tanto@tanto.com.br
+
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="nevegacao">
+                        <!--                            <strong> Unidade Lages </strong>-->
+
+
+                        <br>
+                        <nav >
+                            <ul>
+                                <li>
+                                    <a href="sobre.html">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="contato.html">Contato</a>
+                                </li>
+                                <li>
+                                    <a href="vendedores.html">Vendedores</a>
+                                </li>
+                                <li>
+                                    <a href="cidades.html">Cidades Atendidas</a>
+                                </li>                          
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="bloco" id="direita">
+                        <strong> Unidade Lages </strong>
+
+                        <br>
+
+                        <br>
+                        Bairro Centro. CEP 88501-045
+                        <br>
+
+                        (49)3232-1232
+                    </div> 
+
+                </div>
+            </div>
+            <!--</div>-->
+        </footer>
 
     </body>
 
