arrumeri pagina sobre empresa

--- a/FeedControl/sobre.html
+++ b/FeedControl/sobre.html
@@ -16,6 +16,8 @@
 
         <!-- Custom CSS -->
         <link href="css/shop-homepage.css" rel="stylesheet">
+        
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -100,28 +102,39 @@
 
             </div>
 
-
-
-            <h1 class="equipe">Empresa</h1>
-            <p>
-                A <b>Agrolages</b> atua como distribuidora exclusiva da marca <b>Guabi</b> na região serrana de 
-                Santa Catarina. A Guabi Natural oferece produtos de alto nível de qualidade, proporcionando uma
-                alimentação saudável e nutritiva para os animais de estimação. A empresa trabalha com alimentos para cães e gatos.
-
-            </p>
-
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    
+                    <h3 class="equipe"><i class="fa fa-info-circle" aria-hidden="true"></i>Empresa</h3>
+                </div>
+                <div class="panel-body">
+                    <p align="justify">A <b>Agrolages</b> atua como distribuidora exclusiva da marca <b>Guabi</b> na região serrana de 
+                        Santa Catarina. A Guabi Natural oferece produtos de alto nível de qualidade, proporcionando uma
+                        alimentação saudável e nutritiva para os animais de estimação. A empresa trabalha com alimentos para cães e gatos.
+                </div>
+            </div>
             <br>
             <br>
-            <h1 class="equipe">Missão</h1>
-            <p>
-                Ser a empresa de Pet Food mais admirada do Brasil, com marcas reconhecidas e desejadas, que geram crescimento acelerado em valor e rentabilidade.</p>
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="equipe"><i class="fa fa-info-circle" aria-hidden="true"></i>Missão</h3>
+                </div>
+                <div class="panel-body">
+                    <p>
+                        Ser a empresa de Pet Food mais admirada do Brasil, com marcas reconhecidas e desejadas, que geram crescimento acelerado em valor e rentabilidade.</p>
+                </div>
+            </div>
 
-            <br>
-            <br>
-            <h1 class="equipe">Visão</h1>
-            <p>
-                Ser reconhecida como uma empresa brasileira líder, inovadora e que proporcione a melhor relação valor benefício para seus clientes e consumidores. 
-            </p>
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="equipe"><i class="fa fa-info-circle" aria-hidden="true"></i>Visão</h3>
+                </div>
+                <div class="panel-body">
+                    <p>
+                        Ser reconhecida como uma empresa brasileira líder, inovadora e que proporcione a melhor relação valor benefício para seus clientes e consumidores. 
+                    </p> </div>
+            </div>
+
             <br>
             <br>
             <br>
