pagina de contato esta pronta

--- a/FeedControl/sobre.html
+++ b/FeedControl/sobre.html
@@ -69,11 +69,11 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="container">
+        <div class="">
 
             <div class="row carousel-holder">
 
-                <div class="col-md-12">
+                <div class="col-md-12 carousel-imagens">
                     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -102,10 +102,10 @@
 
             </div>
 
-            <div class="panel panel-success">
+            <div class="panel panel-success" >
                 <div class="panel-heading">
                     
-                    <h3 class="equipe"><i class="fa fa-info-circle" aria-hidden="true"></i>Empresa</h3>
+                    <h3 class="equipe"><i class="fa fa-university" aria-hidden="true"></i> Empresa</h3>
                 </div>
                 <div class="panel-body">
                     <p align="justify">A <b>Agrolages</b> atua como distribuidora exclusiva da marca <b>Guabi</b> na região serrana de 
@@ -113,11 +113,10 @@
                         alimentação saudável e nutritiva para os animais de estimação. A empresa trabalha com alimentos para cães e gatos.
                 </div>
             </div>
-            <br>
-            <br>
+            
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="equipe"><i class="fa fa-info-circle" aria-hidden="true"></i>Missão</h3>
+                    <h3 class="equipe"><i class="fa fa-road" aria-hidden="true"></i> Missão</h3>
                 </div>
                 <div class="panel-body">
                     <p>
@@ -127,7 +126,7 @@
 
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="equipe"><i class="fa fa-info-circle" aria-hidden="true"></i>Visão</h3>
+                    <h3 class="equipe"><i class="fa fa-paw" aria-hidden="true"></i> Visão</h3>
                 </div>
                 <div class="panel-body">
                     <p>
