Adicionados os icones das paginas e editada a pagina de Cidades Atendidas

--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -10,6 +10,9 @@
         <meta name="author" content="">
 
         <title>FeedControl</title>
+        
+        <link rel="icon"  href="img/icone.png" />
+
 
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -265,14 +268,13 @@
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="bloco" id="direita">
                             <strong> Unidade Lages </strong>
-
-                            <br>
-
-                            <br>
-                            Bairro Centro. CEP 88501-045
-                            <br>
-
-                            (49)3232-1232
+                        <br>
+                        <br>
+                        Bairro: Centro
+                        <br>
+                        CEP: 88501-045
+                        <br>
+                        Contato: (49)3232-1232
                         </div> 
 
                     </div>
