--- a/FeedControl/contato.html
+++ b/FeedControl/contato.html
@@ -10,6 +10,8 @@
         <meta name="author" content="">
 
         <title>FeedControl</title>
+        
+        <link rel="icon"  href="img/icone.png" />
 
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -128,9 +130,14 @@
                 </div>
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="bloco" id="direita">
-                        <strong> Distribuidora Guabi em Lages </strong>
+                       <strong> Unidade Lages </strong>
                         <br>
-                         (49)3232-1232
+                        <br>
+                        Bairro: Centro
+                        <br>
+                        CEP: 88501-045
+                        <br>
+                        Contato: (49)3232-1232
 
                         <br>
                         <i class="fa fa-map-marker" aria-hidden="true"></i> Bairro Santa Helena. CEP 88517-600
