--- a/FeedControl/seniorGranPlus.html
+++ b/FeedControl/seniorGranPlus.html
@@ -10,6 +10,9 @@
         <meta name="author" content="">
 
         <title>FeedControl</title>
+        
+        <link rel="icon"  href="img/icone.png" />
+
 
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -145,14 +148,13 @@
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="bloco" id="direita">
                         <strong> Unidade Lages </strong>
-
                         <br>
-
                         <br>
-                        Bairro Centro. CEP 88501-045
+                        Bairro: Centro
                         <br>
-
-                        (49)3232-1232
+                        CEP: 88501-045
+                        <br>
+                        Contato: (49)3232-1232
                     </div> 
 
                 </div>
