Adicionadas as páginas para GranPlus - Gatos (Filhotes, Adultos e Castrados)

--- a/FeedControl/cachorrosEGatoGranPlus.html
+++ b/FeedControl/cachorrosEGatoGranPlus.html
@@ -117,7 +117,7 @@
                             <img src="img/gato.jpg" alt="">
                         </div>
                         <div class="caption">  
-                            <p ><a href="gatos.html" target="_self" class="letrasGran">Gato</a></p>
+                            <p ><a href="gatosGranPlus.html" target="_self" class="letrasGran">Gato</a></p>
 
                         </div>                            
                     </div>
