--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -99,7 +99,7 @@
                 <div class="col-md-3">
                     <p class="lead">Catálogos de produtos</p>
                     <div class="list-group">
-                        <a href="cachorrosEGato.html" class="list-group-item">Gran Plus </a>
+                        <a href="cachorrosEGatoGranPlus.html" class="list-group-item">Gran Plus </a>
                         <a href="cachorrosEGatoGuabi.html" class="list-group-item">Guabi Natural</a>
                         <a href="cachorrosEGatoSabor&Vida.html" class="list-group-item">Sabor & Vida</a>
                         <a href="cachorrosFaro.html" class="list-group-item">Faro</a>
