--- a/FeedControl/gatoFilhoteGranPlus.html
+++ b/FeedControl/gatoFilhoteGranPlus.html
@@ -10,7 +10,7 @@
         <meta name="author" content="">
 
         <title>FeedControl</title>
-        
+
         <link rel="icon"  href="img/icone.png" />
 
         <!-- Bootstrap Core CSS -->
@@ -68,7 +68,6 @@
             <!-- /.container -->
         </nav>
 
-        <!-- Page Content -->
         <div class="row carousel-holder">
 
             <div class="col-md-12">
@@ -76,9 +75,8 @@
 
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="banner" src="img/bannerCachorroEGato.jpg" alt="">
+                            <img class="banner" src="img/BannerCachorroEGato.jpg" alt="">
                         </div>
-
                     </div>
                 </div>
 
@@ -86,50 +84,19 @@
         </div>
 
         <div class="container">
-
-
             <div class="row">
-
-
-
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/gatofilhoteGran.jpg" alt="">
-                        </div>
-                        <div class="caption" >        
-                            <p> <a href="#" target="_self" class="letrasGran">Filhote</a></p>
-
+                        <p class="tituloGatoF"><b>GRANPLUS FILHOTE</b></p>
+                        <p class="subtituloGatoA">Sabor: Frango & Arroz</p>
+                        <div class="racao">
+                            <img src="img/granplus-gatos-filhote.png" alt="">
                         </div>
                     </div>
                 </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail " style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/gato.jpg" alt="">
-                        </div>
-
-                        <div class="caption">
-                            <p> <a href="#" target="_self" class="letrasGran">Adulto</a></p>
-
-                        </div>                            
-                    </div>
-                </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/gatoCastradoGran.jpg" alt="">
-                        </div>
-                        <div class="caption">  
-                            <p ><a href="#" target="_self" class="letrasGran">Castrado</a></p>
-
-                        </div>                            
-                    </div>
-                </div>              
             </div>
-        </div> <!-- jQuery -->
+        </div>
+        <!-- jQuery -->
         <script src="js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
