cachorros gerais e faro foram adicionados

--- a/FeedControl/adultoFaro.html
+++ b/FeedControl/adultoFaro.html
@@ -89,10 +89,20 @@
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail" style="border: 0;">
 
-                        <p class="granplustitulo">GRANPLUS ADULTO</p>
+                        <p class="granplustitulo">FARO ADULTO</p>
                         <p class="granplussubtitulo"><b>CÃES ADULTOS </b></p>
                         <div class="racao">
-                            <img src="img/racaoadultoG.png" alt="">
+                            <img src="img/faroAdulto.png" alt="">
+                        </div>                      
+                    </div>
+                </div>
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+
+                        <p class="granplustitulo">FARO ADULTO</p>
+                        <p class="granplussubtitulo"><b>CÃES ADULTOS </b></p>
+                        <div class="racao">
+                            <img src="img/farolata.png" alt="">
                         </div>                      
                     </div>
                 </div>
