--- a/FeedControl/adultoGeral.html
+++ b/FeedControl/adultoGeral.html
@@ -10,7 +10,7 @@
         <meta name="author" content="">
 
         <title>FeedControl</title>
-        
+
         <link rel="icon"  href="img/icone.png" />
 
         <!-- Bootstrap Core CSS -->
@@ -151,6 +151,38 @@
                         </div>                         
                     </div>
                 </div>  
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+
+                        <p class="granplustitulo">HERÓI ADULTO</p>
+                        <p class="granplussubtitulo"><b>HERÓI ADULTOS SABOR CARNE</b></p>
+                        <div class="racao">
+                            <img src="img/heroiA.png" alt="">
+                        </div>                      
+                    </div>
+                </div>  
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+                        <p class="granplustitulo">HERÓI ADULTO</p>
+                        <p class="granplussubtitulo"><b>HERÓI ADULTOS SABOR CARNE E VEGETAIS</b></p>
+                        <div class="racao">
+                            <img src="img/heroiAdultp.png" alt="">
+                        </div>                      
+                    </div>
+                </div> 
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+
+                        <p class="granplustitulo">GRANPLUS ADULTO</p>
+                        <p class="granplussubtitulo"><b>CÃES ADULTOS </b></p>
+                        <div class="racao">
+                            <img src="img/racaoadultoG.png" alt="">
+                        </div>                      
+                    </div>
+                </div>
             </div>
 
 
