--- a/FeedControl/filhoteFaro.html
+++ b/FeedControl/filhoteFaro.html
@@ -90,10 +90,20 @@
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail" style="border: 0;">
 
-                        <p class="granplustitulo">GRANPLUS FILHOTE</p>
+                        <p class="granplustitulo">FARO FILHOTE</p>
                         <p class="granplussubtitulo"><b>CÃES FILHOTES</b></p>
                         <div class="racao">
-                            <img src="img/cachorrofilhotegran.jpg" alt="">
+                            <img src="img/faroFilhote.png" alt="">
+                        </div>                      
+                    </div>
+                </div>
+                 <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+
+                        <p class="granplustitulo">FARO MACIO FILHOTE</p>
+                        <p class="granplussubtitulo"><b>CÃES FILHOTES</b></p>
+                        <div class="racao">
+                            <img src="img/faroFilhoteMacio.png" alt="">
                         </div>                      
                     </div>
                 </div>
