--- a/FeedControl/cachorrosEGatoGranPlus.html
+++ b/FeedControl/cachorrosEGatoGranPlus.html
@@ -76,7 +76,7 @@
 
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="banner" src="img/bannerCachorroEGato.jpg" alt="">
+                            <img class="banner" src="img/BannerCachorroEGato.jpg" alt="">
                         </div>
 
                     </div>
