Adicionando as páginas das rações Guabi Natural e Sabor & Vida

--- a/FeedControl/cachorrosEGatoGuabi.html
+++ b/FeedControl/cachorrosEGatoGuabi.html
@@ -117,7 +117,7 @@
                             <img src="img/gato.jpg" alt="">
                         </div>
                         <div class="caption">  
-                            <p ><a href="gatosGuabi.html" target="_self" class="letrasCachorros">Gato</a></p>
+                            <p ><a href="gatosGuabiNatural.html" target="_self" class="letrasCachorros">Gato</a></p>
 
                         </div>                            
                     </div>
