--- a/FeedControl/gatosGuabiNatural.html
+++ b/FeedControl/gatosGuabiNatural.html
@@ -98,7 +98,7 @@
                             <img src="img/gatofilhoteGran.jpg" alt="">
                         </div>
                         <div class="caption" >        
-                            <p> <a href="gatoFilhoteSabor&Vida.html" target="_self" class="letrasGran">Filhote</a></p>
+                            <p> <a href="gatoFilhoteGuabiNatural.html" target="_self" class="letrasGran">Filhote</a></p>
 
                         </div>
                     </div>
@@ -111,11 +111,23 @@
                         </div>
 
                         <div class="caption">
-                            <p> <a href="gatoAdultoSabor&Vida.html" target="_self" class="letrasGran">Adulto</a></p>
+                            <p> <a href="gatoAdultoGuabiNatural.html" target="_self" class="letrasGran">Adulto</a></p>
 
                         </div>                            
                     </div>
-                </div>             
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+                        <div class="thumb-vendedor">
+                            <img src="img/gatoCastradoGran.jpg" alt="">
+                        </div>
+                        <div class="caption">  
+                            <p ><a href="gatoCastradoGuabiNatural.html" target="_self" class="letrasGran">Castrado</a></p>
+
+                        </div>                            
+                    </div>
+                </div>              
             </div>
         </div> <!-- jQuery -->
         <script src="js/jquery.js"></script>
