Titulos adicionado diferente, colocado em tamanho maior.

--- a/FeedControl/adultoBiriba.html
+++ b/FeedControl/adultoBiriba.html
@@ -88,10 +88,11 @@
         <div class="container">
 
             <div class="row">
+                 <div class="col-sm-12 col-lg-12 col-md-12">
+                    <p class="tituloGeral"><b>BIRIBA</b></p>
+                </div>
                 <div class="col-sm-12 col-lg-12 col-md-12">
-                    <div class="thumbnail" style="border: 0;">
-
-                        <p class="tituloadulto">BIRIBA</p>
+                    <div class="thumbnail" style="border: 0;">                        
                         <p class="subtituloadulto"><b>BIRIBA SABOR CARNE</b></p>
                         <div class="racao">
                             <img src="img/biriba.png" alt="">
