--- a/FeedControl/adultoFiel.html
+++ b/FeedControl/adultoFiel.html
@@ -88,10 +88,13 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-4 col-lg-4 col-md-4">
+                <div class="col-sm-12 col-lg-12 col-md-12">
+                    <p class="tituloGeral"><b>FIEL</b></p>
+                </div>
+                <div class="col-sm-12 col-lg-12 col-md-12">
                     <div class="thumbnail" style="border: 0;">
 
-                        <p class="tituloadulto">FIEL</p>
+                       
                         <p class="subtituloadulto"><b>FIEL SABOR CARNE</b></p>
                         <div class="racao">
                             <img src="img/fiel.png" alt="">
