--- a/FeedControl/cachorrosEGatoGranPlus.html
+++ b/FeedControl/cachorrosEGatoGranPlus.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-12 col-md-12">
-                    <p class="granPlus"><b>Gran Plus</b></p>
+                    <p class="tituloGeral"><b>Gran Plus</b></p>
                 </div>
             </div>
             <br>
