--- a/FeedControl/cachorrosEGatoGuabi.html
+++ b/FeedControl/cachorrosEGatoGuabi.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-12 col-md-12">
-                    <p class="guabi"><b>GUABI NATURAL</b></p>
+                    <p class="tituloGeral"><b>GUABI NATURAL</b></p>
                 </div>
             </div>
             <br>
