--- a/FeedControl/cachorrosEGatoSabor&Vida.html
+++ b/FeedControl/cachorrosEGatoSabor&Vida.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-12 col-md-12">
-                    <p class="saborVida"><b>SABOR & VIDA</b></p>
+                    <p class="tituloGeral"><b>SABOR & VIDA</b></p>
                 </div>
             </div>
             <br>
