--- a/FeedControl/cachorrosFaro.html
+++ b/FeedControl/cachorrosFaro.html
@@ -90,7 +90,7 @@
 
             <div class="row">
                 <div class="col-sm-12 col-lg-12 col-md-12">
-                    <p class="faro"><b>FARO</b></p>
+                    <p class="tituloGeral"><b>FARO</b></p>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6">
                     <div class="thumbnail " style="border: 0;">
